# tools-impact-engine-measure

./: .envrc  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  DESIGN-PHILOSOPHY.md  LICENSE  PLAN-A-generalize-skill.md  PLAN-B-get-fit-params.md  PLAN.md  README.md  environment.yaml  pyproject.toml
.claude/: general-skills  general-subagents  settings.local.json
.claude/docs/: guidelines.md
.claude/plans/: code-simplification.md  extensibility-cleanup.md
.claude/skills/add-measurement-model/: SKILL.md
.claude/skills/feature-types/: demo-notebook.md  model.md
.github/workflows/: ci.yaml  docs.yml  tests.yml
.kiro/specs/causal-impact-analyzer/: design.md
.kiro/specs/data-abstraction-layer/: design.md  requirements.md  tasks.md
_support/workflows/: full-validation.md  maintain-documentation.md
demo/: config_data_abstraction.json  config_impact_engine.yaml  config_simulator.json  workflow.py
deployment/: aws-architecture.md
docs/: Makefile  README.md  conf.py  data-abstraction-layer.md  design.md  index.md  modeling-abstraction-layer.md  requirements.txt  user-stories.md
docs/source/: GUIDELINES.md  Makefile  api_reference.rst  conf.py  configuration.md  design.md  index.md  installation.md  usage.md
docs/source/guides/: api_reference.rst  configuration.md  usage.md
docs/source/methodology/: demo_aa_testing.ipynb  demo_parameter_sensitivity.ipynb  matplotlibrc  notebook_support.py
docs/source/methods/: demo_experiment.ipynb  demo_interrupted_time_series.ipynb  demo_metrics_approximation.ipynb  demo_nearest_neighbour_matching.ipynb  demo_subclassification.ipynb  demo_synthetic_control.ipynb  notebook_support.py
docs/source/models/: demo_experiment.ipynb  demo_interrupted_time_series.ipynb  demo_metrics_approximation.ipynb  demo_model_selection.ipynb  demo_nearest_neighbour_matching.ipynb  demo_subclassification.ipynb  demo_synthetic_control.ipynb  matplotlibrc  notebook_support.py  overview.md
documentation/: GUIDELINES.md  api_reference.rst  architecture.md  conf.py  configuration.md  design.md  index.md  usage.md  user-stories.md
documentation/_static/diagrams/: overview.drawio
documentation/models/: demo_experiment.ipynb  demo_interrupted_time_series.ipynb  demo_metrics_approximation.ipynb  demo_nearest_neighbour_matching.ipynb  demo_subclassification.ipynb  demo_synthetic_control.ipynb
documentation/models/configs/: demo_interrupted_time_series_catalog.yaml  demo_metrics_approximation.yaml  demo_metrics_approximation_catalog.yaml  demo_subclassification_baseline.yaml  demo_synthetic_control.yaml  demo_synthetic_control_baseline.yaml
documentation/notebooks/: demo_basic.ipynb  demo_enrichment_validation.ipynb  demo_metrics_approximation.ipynb  demo_subclassification.ipynb
documentation/notebooks/configs/: demo_basic.yaml  demo_basic_catalog.yaml  demo_enrichment.yaml  demo_enrichment_baseline.yaml  demo_enrichment_catalog.yaml  demo_metrics_approximation_baseline.yaml  demo_metrics_approximation_catalog.yaml  demo_subclassification.yaml  demo_subclassification_catalog.yaml
impact_engine/: __init__.py  config.py  data_sources.py  engine.py  run_impact_analysis.py
impact_engine/data_sources/: __init__.py  base.py  manager.py  simulator.py
impact_engine/metrics/: __init__.py  adapter_catalog_simulator.py  base.py  manager.py
impact_engine/modeling/: engine.py
impact_engine/models/: __init__.py  adapter_interrupted_time_series.py  base.py  manager.py
impact_engine/tests/: test_evaluate_impact.py  test_modeling_engine.py  test_models_interrupted_time_series.py  test_models_manager.py
impact_engine_measure/: __init__.py  config.py  config_defaults.yaml  engine.py  normalize.py  results.py
impact_engine_measure/core/: __init__.py  config_bridge.py  contracts.py  registry.py  transforms.py  validation.py
impact_engine_measure/metrics/: __init__.py  base.py  factory.py  manager.py
impact_engine_measure/metrics/catalog_simulator/: __init__.py  adapter.py  transforms.py
impact_engine_measure/models/: base.py  conftest.py  factory.py  manager.py
impact_engine_measure/storage/: __init__.py  artifact_store_adapter.py  base.py  factory.py  manager.py
impact_engine_measure/tests/: test_evaluate_impact.py
science/demo/: config_enrichment.yaml  config_enrichment_simulator.yaml  config_impact_engine.yaml  config_metrics_approximation.yaml  config_metrics_approximation_workflow.yaml  workflow.py  workflow_enrichment.py  workflow_metrics_approximation.py
science/impact_engine/: __init__.py  config.py  config_defaults.yaml  engine.py
science/impact_engine/config/: parser.py  (+2 more)
science/impact_engine_measure/: __init__.py  engine.py
science/integration_tests/: __init__.py  test_metrics_approximation_pipeline.py
showcase/: DESIGN.md  GUIDELINES.md
showcase/diagrams/: architecture.drawio  integration.drawio  overview.drawio
tests/: test_evaluate_impact.py  test_load_results.py  test_measure_impact.py  test_metrics_catalog_simulator.py  test_metrics_manager.py  test_models_manager.py  test_normalize.py  test_validation.py
(+200 files in other folders)
