[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impact_engine"
version = "0.1.0"
description = "A package for evaluating product impact."
authors = [
  { name = "eisenhauerIO", email = "info@eisenhauer.io" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "pyyaml",
  "statsmodels",
  "online_retail_simulator @ git+https://github.com/eisenhauerIO/tools-catalog-generator.git@fdc46d47bb5e39785e65219843c9555ee4694100",
  "artifact-store @ git+https://github.com/eisenhauerIO/utils-artifact-store.git@b389fc5c3e558659626408996d9c896daed00b68"
]

[project.urls]
Homepage = "https://github.com/eisenhauerIO/tools-impact-engine"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
  "pre-commit"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["science/impact_engine"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "black",
  "pre-commit"
]

[tool.hatch.envs.default.scripts]
test = "pytest science/impact_engine/tests/ -v"
format = "black ."
lint = "ruff check science/"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
  "myst-parser>=2.0.0",
  "linkify-it-py>=2.0.0",
  "sphinx-autodoc-typehints>=1.12.0"
]
