[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impact_engine_measure"
version = "0.1.0"
description = "A package for evaluating product impact."
authors = [
  { name = "eisenhauerIO", email = "info@eisenhauer.io" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "pyyaml",
  "statsmodels",
  "pysyncon",
  "causalml",
  "online_retail_simulator @ git+https://github.com/eisenhauerIO/tools-online-retail-simulator.git",
  "artifact-store @ git+https://github.com/eisenhauerIO/utils-artifact-store.git"
]

[project.urls]
Homepage = "https://github.com/eisenhauerIO/tools-impact-engine"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pre-commit"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["impact_engine_measure"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "ruff",
  "pre-commit",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
lint = "ruff check ."
format = "ruff format ."

[tool.hatch.envs.docs]
dependencies = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
  "myst-parser>=2.0.0",
  "linkify-it-py>=2.0.0",
  "sphinx-autodoc-typehints>=1.12.0",
  "nbsphinx>=0.9.0",
  "ipykernel>=6.0.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.12.0",
  "jupyter",
  "nbconvert",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build/html"

[tool.ruff]
extend-exclude = ["_external", "docs/build"]
line-length = 120

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["D", "E", "F", "I"]
"tests/**" = ["D"]
"**/tests/**" = ["D"]
"impact_engine_measure/**" = ["D"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
